Add og:image tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Mörner Industries</title>
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+		<meta property="og:image" content="http://morner.industries/assets/logo-512x512.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 		<link rel="stylesheet" href="assets/app.css">
