Use grid with flexbox fallback

--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 		</header>
 		<nav>
 			<ul>
-				<li onclick="onContractingClick()">
-					Contracting
-				</li>
-				<li onclick="onInvestmentsClick()">
-					Investments
-				</li>
+				<li onclick="onContractingClick()">Contracting</li>
+				<li onclick="onInvestmentsClick()">Holdings</li>
 			</ul>
 		</nav>
 		<section>
 		</section>
-		<footer>
-			© 2017 Mörner Industries
-		</footer>
+		<footer>© 2017 Mörner Industries</footer>
 		<script src="scripts/app.js"></script>
 	</body>
 </html>
