--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul>
 				<li onclick="onContractingClick()">Contracting</li>
-				<li onclick="onInvestmentsClick()">Holdings</li>
+				<li onclick="onHoldingsClick()">Holdings</li>
 			</ul>
 		</nav>
 		<section>
