--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Overpass+Mono:600" rel="stylesheet">
 	</head>
 	<body ontouchstart="onInitialClick(event)" onmousedown="onInitialClick(event)">
-		<header>
+		<header onclick="onHeaderClick()">
 			<img src="assets/logo.svg">
 		</header>
 		<nav>
