Add minor html fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Mörner Industries</title>
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta property="og:image" content="http://morner.industries/assets/logo-512x512.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
@@ -11,7 +12,7 @@
 	</head>
 	<body ontouchstart="onInitialClick(event)" onmousedown="onInitialClick(event)">
 		<header onclick="onHeaderClick()">
-			<img src="assets/logo.svg">
+			<img src="assets/logo.svg" alt="Mörner Industries Logotype">
 		</header>
 		<nav>
 			<ul>
